# spa-study-case

./: .hgignore  .hgtags  LICENSE  Makefile  README.rst  docker-compose.yml
.github/workflows/: codeql-analysis.yml  main.yml
backend/: .isort.cfg  Dockerfile.fastapi_api  Dockerfile.quart_api  Dockerfile.tornado_api  Makefile  pyproject.toml
backend/common/: docker-compose.yml
backend/common/app/: config.py  resources.py  sessions.py
backend/common/app/models/: __init__.py  user.py
backend/common/tests/: fixtures.py  test_config.py  test_db_operations.py  test_session.py  test_utils.py  test_wait.py  utils.py
backend/common/tests/models/: test_user_model.py
backend/common/tests/routes/: test_user.py
backend/fastapi_api/: Dockerfile  Makefile  cert  hypercorn.toml  pyproject.toml
backend/fastapi_api/alembic/: env.py
backend/fastapi_api/app/: __init__.py  auth.py  config.py  logger.py  main.py  models.py  resources.py  sessions.py  utils.py
backend/fastapi_api/app/models/: __init__.py  user.py
backend/fastapi_api/app/routers/: hello.py  login.py  user.py
backend/fastapi_api/cert/: README.rst
backend/fastapi_api/tests/: conftest.py  env  test_authentication.py  test_config.py  test_db_operations.py  test_login.py  test_session.py  test_users.py  test_utils.py
backend/fastapi_api/tests/models/: test_user_model.py
backend/fastapi_api/tests/routers/: test_hello.py  test_login.py  test_user.py
backend/quart/: Makefile  pyproject.toml
backend/quart/app/: api.py  config.py
backend/quart/tests/: conftest.py  test_hello.py
backend/quart_api/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.slim.multi-stage  Dockerfile.slim.one-stage  Makefile  hypercorn.toml  pyproject.toml  pytest.ini
backend/quart_api/app/: __init__.py  config.py  main.py  resources.py  sessions.py
backend/quart_api/cert/: README.rst  server.key  server.pem
backend/quart_api/tests/: conftest.py  hypercorn.toml  test_env.py  test_hello.py  test_session.py
backend/quart_api/tests/certificates/: client.pem
backend/tornado_api/: Dockerfile  Makefile  pyproject.toml
backend/tornado_api/app/: __init__.py  api.py  config.py  main.py  models  models.py  resources.py  sessions.py
backend/tornado_api/app/handlers/: base.py  login.py  user.py
backend/tornado_api/cert/: server.key
backend/tornado_api/tests/: common  conftest.py  env.test  test_hello.py  test_login.py  test_session.py
backend/tornado_api/tests/common/: fixtures.py  test_config.py  test_session.py
backend/tornado_api/tests/common/models/: test_user_model.py
backend/tornado_api/tests/common/routes/: test_hello.py  test_login.py  test_user.py
caddy/: Caddyfile
server/: .env.dev  .env.tmpl  Makefile  README.rst  docker-compose.yml  env.template  pyproject.toml  pytest.ini
server/caddy/: Caddyfile
server/tests/: conftest.py  test_hello.py
