[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.770"
flake8 = "^3.7.9"
yapf = "^0.29.0"
flake8-debugger = "^3.2.1"
flake8-fixme = "^1.1.1"
pep8-naming = "^0.10.0"
flake8-print = "^3.1.4"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
