[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "*"
flake8 = "*"
yapf = "*"
flake8-debugger = "*"
flake8-fixme = "*"
pep8-naming = "*"
flake8-print = "*"
isort = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
