[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.12.1"
pytest = "^5.4.1"
pytest-asyncio = "^0.12.0"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
