[tool.poetry]
name = "fastapi_api"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
hypercorn = "^0.9.5"
uvloop = "^0.14.0"
ujson = "^2.0.3"
python-dotenv = "^0.13.0"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
pytest-cov = "^2.8.1"
httpx = "^0.12.1"
asgi-lifespan = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
