[tool.poetry]
name = "fastapi_api"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
hypercorn = "*"
uvloop = "*"
python-dotenv = "*"
loguru = "*"
fakeredis = "*"
aioredis = "*"
email_validator = "*"
passlib = {extras = ["argon2"], version = "*"}
databases = "*"
pony = "*"
aiosqlite = "*"
asyncpg = "*"
psycopg2cffi = "*"
orjson = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
httpx = "*"
asgi-lifespan = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
