[tool.poetry]
name = "fastapi_api"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
hypercorn = "*"
uvloop = "*"
python-dotenv = "*"
loguru = "*"
aioredis = "*"
email_validator = "*"
passlib = {extras = ["argon2"], version = "*"}
databases = "*"
aiosqlite = "*"
asyncpg = "*"
psycopg2cffi = "*"
orjson = "*"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
httpx = "*"
asgi-lifespan = "*"
alt-pytest-asyncio = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
