[tool.poetry]
name = "quart-backend"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.11.5"
loguru = "^0.4.1"
python-dotenv = "^0.13.0"
hypercorn = {extras = ["h3"], version = "^0.9.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
pytest-coverage = "^0.0"
httpie = "^2.1.0"
trustme-cli = "^2020.2.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
