[tool.poetry]
name = "quart-backend"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "*"
loguru = "*"
python-dotenv = "*"
hypercorn = "*"
uvloop = "*"
aioredis = "*"
fakeredis = "*"
ujson = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
httpx = "*"
asgi-lifespan = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
