[tool.poetry]
name = "tornado_api"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "*"
python-dotenv = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-tornado = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
