[tool.poetry]
name = "tornado_api"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "*"
python-dotenv = "*"
loguru = "*"
pydantic = "*"
email_validator = "*"
aioredis = "*"
fakeredis = "*"
databases = "*"
pony = "*"
passlib = {extras = ["argon2"], version = "*"}
orjson = "*"
aiosqlite = "*"
asyncpg = "*"
psycopg2cffi = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
alt-pytest-asyncio = "*"
httpx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
